--- a/eaccounting.html
+++ b/eaccounting.html
@@ -66,8 +66,8 @@
     <div class="row">
       <div class="twelve columns">
         <p><h2>01. The Brief</h2></p>
-        <p>eAccounting is one of Vismas most popular products with more than 100 000 users. I joined the team to implement findings from an innovation project I had been involved in, but soon got free hands to help improve the whole user experience of their mobile apps.</p>
-        <p>The inital states of the apps wasn't great, while the apps worked well they looked and felt outdated. The team had also been without a dedicated UX:er for quite some time. The only users leaving reviews on them were frustrated with a steep learning curve and lack of functionality leaving a negative feeling towards them from some of the developers.</p>
+        <p>eAccounting is one of Vismas most popular products with more than 100 000 users. I joined the team to implement findings from an innovation project I had been involved in, but soon got free hands to help improve the whole user experience of their mobile app.</p>
+        <p>The inital state of the app wasn't great, while it worked well it looked and felt outdated. The team had also been without a dedicated UX:er for quite some time. The only users leaving reviews were frustrated with a steep learning curve and lack of functionality leaving a negative feeling towards them from some of the developers.</p>
       </div>
     </div>
 
@@ -80,8 +80,8 @@
     <div class="row">
       <div class="twelve columns">
           <p><h2>02. The Problem</h2></p>
-          <p>An early goal of mine was to get the team behind the apps out of the office to meet actual users. By doing this it quickly became obvious that users running a basic company were quite happy with the apps, but users with more advanced requirements found them lacking functionality. These users formed a substantial part of our userbase. I think it this was the most important part of the project as it bridged the gap between developers and users. We could see that a lot of the work that had been put into the app was appreciated, and got an understanding for the angry reviews as well.</p>
-          <p>A review of the comments that were received on Appstore, Play Store and the feedback functionality built into the apps confirmed these findings, and we ended up with a prioritized list of the most important missing features as well as some hard to use functionality.</p>
+          <p>An early goal of mine was to get the team out of the office to meet actual users. By doing this it quickly became obvious that users running a basic company were quite happy with the app, but users with more advanced requirements found it lacking functionality. These users formed a substantial part of our userbase. I think it this was the most important part of the project as it bridged the gap between developers and users. We could see that a lot of the work that had been put into the app was appreciated, and got an understanding for the angry reviews as well.</p>
+          <p>A review of the comments that were received on Appstore, Play Store and the feedback functionality built into the app confirmed these findings, and we ended up with a prioritized list of the most important missing features as well as some hard to use functionality.</p>
         </div>
       </div>
 
@@ -94,8 +94,8 @@
       <div class="row extra-space">
         <div class="twelve columns">
           <p><h2>03. The Process</h2></p>
-          <p>In the eAccounting project I got to continue working on mobile design in both the Android and iOS ecosystems. I also got to redesign how we present those apps on Apple Appstore and Google Play Store together with the marketing department, focusing on fun and lively screenshots combined with short and to the point copy.</p>
-          <p>We introduced a lot of new functionality in the app that was higly requested, but actually managed to decrease the number of navigation items. This was done by building a dashboard on the startpage that contained some of the features, and by combining other features into the same menu item. All of these changes were prototyped and well recieved with the userbase, reassuring us that we were on the right track.</p>
+          <p>In this project I got to continue working on mobile design in both the Android and iOS ecosystems. I also got to redesign how we present our apps on Apple Appstore and Google Play Store together with the marketing department, focusing on fun and lively screenshots combined with short and to the point copy.</p>
+          <p>We introduced a lot of new functionality that was higly requested, but actually managed to decrease the number of navigation items. This was done by building a dashboard on the startpage that contained some of the features, and by combining other features into the same menu item. All of these changes were prototyped and well recieved with the userbase, reassuring us that we were on the right track.</p>
         </div>
       </div>
 
